--- a/Units/Defectoscope/Defectoscope.vcxproj
+++ b/Units/Defectoscope/Defectoscope.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Dialogs\FrameWindowDlg.cpp" />
     <ClCompile Include="Dialogs\InputOutputDlg.cpp" />
     <ClCompile Include="Dialogs\MedianFiltreDlg.cpp" />
+    <ClCompile Include="Dialogs\OffsetSensorDlg.cpp" />
     <ClCompile Include="Dialogs\PacketDlg.cpp" />
     <ClCompile Include="Dialogs\PipeThicknessDlg.cpp" />
     <ClCompile Include="Dialogs\RotationalSpeedDlg.cpp" />
