--- a/Units/Defectoscope/Defectoscope.vcxproj
+++ b/Units/Defectoscope/Defectoscope.vcxproj
@@ -141,7 +141,6 @@
     <ClCompile Include="App\App.cpp" />
     <ClCompile Include="App\AppBase.cpp" />
     <ClCompile Include="App\ChangeTypeSize.cpp" />
-    <ClCompile Include="App\VersionDiff.cpp" />
     <ClCompile Include="Compute\AppKeyHandler.cpp" />
     <ClCompile Include="Compute\Automat.cpp" />
     <ClCompile Include="Compute\ComputeResult.cpp" />
@@ -166,6 +165,7 @@
     <ClCompile Include="Dialogs\FrameWindowDlg.cpp" />
     <ClCompile Include="Dialogs\InputOutputDlg.cpp" />
     <ClCompile Include="Dialogs\MedianFiltreDlg.cpp" />
+    <ClCompile Include="Dialogs\MinimalTubeLengthDlg.cpp" />
     <ClCompile Include="Dialogs\OffsetSensorDlg.cpp" />
     <ClCompile Include="Dialogs\PacketDlg.cpp" />
     <ClCompile Include="Dialogs\PipeThicknessDlg.cpp" />
@@ -317,7 +317,6 @@
     <ClInclude Include="App\ChangeTypeSize.h" />
     <ClInclude Include="App\Config.h" />
     <ClInclude Include="App\MessageItems.h" />
-    <ClInclude Include="App\VersionDiff.h" />
     <ClInclude Include="Compute\AppKeyHandler.h" />
     <ClInclude Include="Compute\Automat.h" />
     <ClInclude Include="Compute\Automat.hpp" />
