--- a/Units/Defectoscope/Defectoscope.vcxproj
+++ b/Units/Defectoscope/Defectoscope.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="..\..\Common\Graphics\GridChart.cpp" />
     <ClCompile Include="..\..\Common\Graphics\StepSeries.cpp" />
     <ClCompile Include="..\..\Common\L502\L502.cpp" />
+    <ClCompile Include="..\..\Common\lir\SubLir.cpp" />
     <ClCompile Include="..\..\Common\PerformanceCounter\PerformanceCounter.cpp" />
     <ClCompile Include="..\..\Common\templates\Hash.cpp" />
     <ClCompile Include="..\..\Common\tools_debug\DebugMess.cpp" />
