--- a/Units/Defectoscope/Defectoscope.vcxproj.filters
+++ b/Units/Defectoscope/Defectoscope.vcxproj.filters
@@ -567,6 +567,9 @@
     <ClCompile Include="Windows\Test502\Test502Window.cpp">
       <Filter>Windows\Test502</Filter>
     </ClCompile>
+    <ClCompile Include="Windows\Test502\TestThresholdDlg.cpp">
+      <Filter>Windows\Test502</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
